Fix nav bar squashing content upwards.

--- a/styles/main_styles.css
+++ b/styles/main_styles.css
@@ -54,7 +54,8 @@ a {
         left: 0;
         background-color: #f0f0f0;
         width: 100%;
-        height: 75px;
+        height: calc(75px + env(safe-area-inset-bottom));
+        height: calc(75px + constant(safe-area-inset-bottom)); /* fallback for older iOS */
         box-shadow: 0 5px 5px 10px rgba(0, 0, 0, 0.1);
         /* Safe area support for iPhones */
         padding-bottom: env(safe-area-inset-bottom);
